# pytodo

./: .gitignore  .mypy.ini  README.md  mypy.ini  pyproject.toml  setup.cfg
pytodo/: cli.py
pytodo/application/task/: __init__.py  task_application_service.py  task_data.py  task_edit_command.py  task_update_command.py
pytodo/domain/models/: __init__.py  interface_task_repository.py  task.py  task_id.py  task_repository.py  text.py
tests/: conftest.py  settings.py  test_pytodo.py
tests/application/: test_services.py
tests/domain/: test_models.py
