[tool.poetry]
name = "pytodo"
version = "0.1.0"
description = ""
authors = ["siteyo <phicyanoc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fire = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
isort = "^5.2.2"
flake8 = "^3.8.3"
mypy = "^0.782"
python-language-server = "^0.34.1"
python-dotenv = "^0.14.0"
ipython = "^7.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
